--- a/configs/decode_config.yaml
+++ b/configs/decode_config.yaml
@@ -12,17 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-
-# All the parameters have been modified as per the new models used/trained.
-
 job_id: "202408041504"
 
 model:
-  llama_path: "/mnt/disk2/ASR/salmon_models/krutrim_model/responder_v2_mpt"
-  whisper_path: "/mnt/disk2/ASR/salmon_models/whisper-large-v2"
-  beats_path: "/mnt/disk2/ASR/salmon_models/BEATs_iter3_plus_AS2M_finetuned_on_AS2M_cpt2.pt"
+  # paths
+  llama_path: ""
+  whisper_path: ""
+  beats_path: ""
 
-  ckpt: "/mnt/disk2/ASR/salmon_models/SALMONN-KRUTRIM/Output/202408041504/checkpoint_best.pth"
+  ckpt: ""
 
   freeze_whisper: True
   freeze_beats: True
